WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81199
Various autoresize fixes.
https://bugs.webkit.org/show_bug.cgi?id=81199
Summary
Various autoresize fixes.
David Levin
Reported
2012-03-15 02:06:03 PDT
Various autoresize fixes.
Attachments
Patch
(17.01 KB, patch)
2012-03-15 02:17 PDT
,
David Levin
fishd
: review+
levin
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2012-03-15 02:17:52 PDT
Created
attachment 132006
[details]
Patch
WebKit Review Bot
Comment 2
2012-03-15 02:20:15 PDT
Please wait for approval from
fishd@chromium.org
before submitting because this patch contains changes to the Chromium public API.
David Levin
Comment 3
2012-03-15 02:24:02 PDT
Prework for
http://code.google.com/p/chromium/issues/detail?id=56693
(and
http://code.google.com/p/chromium/issues/detail?id=58816
since I'll like just fix both at the same time).
David Levin
Comment 4
2012-03-15 02:32:06 PDT
As note to any reviews, this one shouldn't need Darin's approval because the public WebKit part is simply removing a deprecated api that he already agreed to being deprecated (enableAutoResize with three parameters).
David Levin
Comment 5
2012-03-15 12:55:39 PDT
Committed as
http://trac.webkit.org/changeset/110875
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug