Source/WebKit/chromium/tests/FrameTestHelpers.h
@@ -33,6 +33,8 @@
 
 #include <string>
 
+class GURL;
+
 namespace WebKit {
 
 class WebFrame;
@@ -43,6 +45,8 @@ class WebViewClient;
 namespace FrameTestHelpers {
 
 void registerMockedURLLoad(const std::string& base, const std::string& fileName);
+// Like the previous overload, but it allows more flexibility in the url since it is given by the caller.
+void registerMockedURLLoad(GURL, const std::string& fileName);
 
 void loadFrame(WebFrame*, const std::string& url);
 
